Reworked Rules. New images for factions, Plugin.
basicly just added contents. Nothing more

--- a/factions.html
+++ b/factions.html
@@ -356,7 +356,7 @@
             <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
                 <p style="font-weight: bold;">Lothlórien</p>
                     <div class="infos">
-                        <img src="img/slide1.png" class="cover" style="height: 259px; width: 400px;">
+                        <img src="img/lothlorien.png" class="cover" style="height: 259px; width: 400px;">
                         <p style="margin-top: 5px;">Informations</p> 
                     </div>
                     <div>
@@ -383,9 +383,9 @@
                 They are all ruled by the powerful Dark Lord, Sauron, and his servants, the Nazgûls.<br>
                 While the Dark Lord lies in Barad-Dûr, the Witch-King takes the lead of the evil armies.<br>
                 The Witch-King is so, the main leader of Mordor's faction and Minas Morgul became the new capital of Mordor.<br>
-                He fought against Gondor with his allies, Gundamar, and took Pellenor Fields, Lossarnach, Dol Amroth, Lebennin and Ithilien.<br>
+                He fought against Gondor with his allies, Gundamar/Umbar/Isengard/Rhûdel, and took Pellenor Fields, Lossarnach, Dol Amroth, Lebennin and Ithilien.<br>
                 Later, he gave a city of Lossarnach to Glupe, King of Bangad-Minhiriath, and made an economical alliance.<br>
-                Mordor is the faction with the most of lands and claimbuilds. It is also one of the strongest faction, if it's not the strongest!"- Jukoz, Faction Leader of Mordor<br>
+                Mordor is one of the faction with the most of lands and claimbuilds. It is also one of the strongest faction, if it's not the strongest!"- Jukoz, Faction Leader of Mordor<br>
             </p>
             </div>
             <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
@@ -441,13 +441,13 @@
             <p>
                 Reunited Kingdom
             </p>
-                                <div>
+                    <!--   <div>
                         <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/f/f1/Gondor_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822204212&format=original">
                         <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/7/73/Dol_Amroth_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822203917&format=original">
                         <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/d5/Lebennin_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20191008143227&format=original">
                         <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/4/4e/Lossarnach_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822105042&format=original">
                         <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/d7/Ithilien_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822110046&format=original">
-                    </div>
+                    </div> -->
         </article>
         <p class="between">
             <br>
@@ -494,7 +494,7 @@
             <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
                 <p style="font-weight: bold;">Rohan</p>
                     <div class="infos">
-                        <img src="img/slide1.png" class="cover" style="height: 259px; width: 400px;">
+                        <img src="img/rohan.png" class="cover" style="height: 259px; width: 400px;">
                         <p style="margin-top: 5px;">Informations</p> 
                     </div>
                     <div>
