--- a/plugins.html
+++ b/plugins.html
@@ -23,10 +23,9 @@ and open the template in the editor.
             <article id="Arda's Plugin">
                 <h4 class="headlinearticles"> Arda's Plugin </h4>
                 <p>
-                    Arda's plugin is a plugin made by Aned. This plugin contain .... <br>
-                    blablabla <br>
-                    gutten tag <br>
-                    Du Hast Kartofel
+                    Arda's plugin is a plugin made by Aned. This plugin contains hunt system and build mode. <br>
+                    For now, you can do /hunt and /aid someone in order to hunt/help someone in a hunt event.<br><br>
+                    *Note that the plugin is still work in progress.
                 </p>
             </article>
             <p class="between">
@@ -45,12 +44,11 @@ and open the template in the editor.
             <br>
             </p>
             <article id="Arda's Plugin">
-                <h4 class="headlinearticles"> Another plugin </h4>
+                <h4 class="headlinearticles"> Chair Plugin </h4>
                 <p>
-                    insert one whatever <br>
-                    Fraülain <br>
-                    gutten tag <br>
-                    Du Hast Kartofel
+                    The plugin is made by Axel_HiddenIsMe_Rooftop (not us)<br>
+                    Therefore, we took materials id's of of Lord of the Ring mod, and included it in the plugin's config.yml file, so now we can use modded stairs blocks as chairs! <br><br>
+                    *This plugin teleports the player, so /back will result in your last seat location.
                 </p>
             </article>
         </div>
