--- a/rules.html
+++ b/rules.html
@@ -94,6 +94,9 @@
             </nav>
             <br>
         </header>
+        <h1 id="head">
+        Rules
+        </h1>
         <main>
         <!--<aside>
             <div class="aside-content">
@@ -125,13 +128,10 @@
                 
 
             <div class="block">
-            <h1 id="head">
-                    Rules
-                </h1>
                 <article id="explanation">
                 <h4 class="headlinearticles"> Explanations </h4>
                 <p>
-                    Safe zone => A safe zone is a region claimed by your faction, or community places like spawn. Allied claim regions do not count as safe zones.<br>
+                    Safe zone => A safe zone is a place were ain't allow, such as Spawn, Esgaroth, Eanoria, etc.<br>
                     Plundering => Plundering is the looting of an Unbannered build. Griefing is not allowed in the process!<br>
                     Claimbuild => A claim build is required to claim a region and has to be approved by staff and be bannered.<br>
                     Region => When talking about regions, we always refer to the claim regions shown in #claim-regions.<br>
@@ -147,9 +147,9 @@
                     2.  No stealing.<br>
                     3.  No hacks or cheating clients.<br>
                     4.  No insulting or thoughtfully hurting someone.<br>
-                    5.  Staff has the final word.<br>
-                    6.  Respect everyone.<br>
-                    7.  Map Location has to be on.<br>
+                    5.  No alternative accounts.<br>
+                    6.  Staff has the final word.<br>
+                    7.  Respect everyone.<br>
                     8.  Middle Earth is the only allowed dimension. Overworld, Nether, The End and Utumno are forbidden.<br>
                 </p>
             </article>
@@ -161,9 +161,12 @@
                 <p>
                     1.  PvP in someone´s base/town is only allowed during events or by mutual agreement.<br>
                     2.  The Town of Silencia and spawn are PvP free zones, no PvP may happen here not even with mutual agreement.<br>
-                    3.  PvP in a safe zone is not allowed, unless by mutual agreement.<br>
+                    3.  PvP in a safe zone is not allowed (spawn, esgaroth, eanoria, etc.)<br>
                     4.  Unbannered builds are open to plundering. During a plunder PvP may happen. The building’s owner is responsible for protecting his build.<br>
                     5.  PvP during events is only allowed if the event staff gives consent.<br>
+                    6.  Two players can pvp if both agrees.
+                    7.  No termites in battles(hunt/wars/events).
+                    8.  No dogs in battles(hunt/wars/events).
                 </p>
             </article>
             <p class="between">
@@ -172,16 +175,16 @@
             <article id="gear">
                 <h4 class="headlinearticles"> Gear Rules </h4>
                 <p>
-                    1.  Mithril Armour is not allowed under any circumstances!<br>
+                    1.  Mithril Armour is not allowed in Roleplay gear! (hunts/war/events)<br>
                     2.  In PvE a player may use any weapon he desires to use.<br>
-                    3.  In PvE a player may use any armour except for Mithril Armour.<br>
+                    3.  Morgul armor is limited to only the 9 nazugul and no one else.<br>
                     4.  Roleplay gear is to be used in PvP, Hunts and any other kind of Roleplay and war combat.<br>
                     5.  During events roleplay gear is the default gear, other gear may only be used if event staff gives consent.<br>
                     6.  Mithril weapons, Utumno weapons, the Gondolinian sword and the Mallorn mace are excluded from roleplay gear under all circumstances.<br>
-                    7.  Roleplay gear means the armour and weapons your faction provides if you do not have a roleplay character.<br>
+                    7.  If you do not have a roleplay character, you need to use default armor/weapons of your faction<br>
                     8.  A faction can acquire access to other faction’s weapons (weapons only not the armour) by trade with another faction. Weapon trade may only be initiated by a faction leader.<br>
-                    9.  If you use a roleplay character you may use the gear you described in your application, even if it is not the faction provided gear (gear has to approve the gear in the application).<br>
-                    10. A player can acquire gear from other factions through roleplay, that has been accepted by staff.<br>
+                    9. Merged factions can use both armours/weapons/units. Pretty much everything.
+                    10. Galvorn will be allowed for custom factions ONLY with good lore upon faction creation.
                 </p>
             </article>
             <p class="between">
@@ -190,25 +193,80 @@
             <article id="hunting">
                 <h4 class="headlinearticles"> Hunting Rules </h4>
                 <p>
-                    1.  The hunter has to announce the hunt two minutes before starting the hunt.<br>
+                    1.  The hunter has to announce the hunt with /hunt command, and wait 2 minutes until he can pvp<br>
                     2.  The hunter and the hunted have to be in the same biome, for the hunt to start.<br>
-                    3.  Players in a safe zone cannot be hunted.<br>
+                    3.  Players in a inaccessible claimbuild cannot be hunted, unless the hunted agrees to fight.<br>
                     4.  Only roleplay gear may be used during hunts.<br>
                     5.  The hunt ends after 10 minutes, unless following happens:<br>
-                        a.  The hunt ends when the hunted reaches a safe zone, or is unreachable for the hunter due to banner protection.<br>
-                        b.  The hunt ends when the hunter or the hunted die, no matter how.<br>
+                        a.  The hunt ends when the hunted stay in a claimbuild, or is unreachable for the hunter due to banner protection (banner should be placed before the hunt).<br>
+                        b.  The hunt ends when the hunter or the hunted die, no matter how. Even if the allies are alive, if the hunted/hunter die, hunts end.<br>
                 </p>
             </article>
             <p class="between">
                 <br>
             </p>
             <article id="generalwar">
-                <h4 class="headlinearticles"> General War Rules </h4>
+                <h4 class="headlinearticles">War Rules </h4>
+                <h4 class="headlinearticles" style="font-size: 25px;"><em>General</em></h4>
                 <p>
-                    The War System is being reworked by Staff currently, we bid you have patience.
-                    During this maintainence wars in general are disabled.
-                    If you do have suggestions pls wait till the system is released and see if we covered it maybe.
+                    1. No sellswords if you want to help another faction, then RP to that faction.<br>
+                    2. To revive a dead faction, build a town in unclaimed region.<br>
+                    3. Adventure mode forced on for war partakers.<br>
+                    4. Faction leaders can give lordship of regions to players where they will not need approval on political matters from faction leader (such as moving units, claimbuilds, productions sites, etc.).<br>
+                    5. When a build is attacked, both the attacker and defender need to find a mutually agreed upon day and time to do the fight. Please discuss a secondary date incase the first does not work! If the first and second are cancelled due to whatever situation, then a final date can be discussed. If that does not work, the attacker wins that battle.
                 </p>
+                <h4 class="headlinearticles" style="font-size: 25px;"><em>Army System</em></h4>
+                <p>
+                    1. No second chances (you lose the first battle after declaring war, you lose the war).<br>
+                    2. War camps required to siege towns/keeps/capitals NOT required for villages/hamlets. <br>
+                    3. Army movement channel will be created with dyno commands.<br>
+                    4. Staff can revoke a war in certain situations.<br>
+                    5. After a battle, staff will count remaining units and these will remain for next wars (if you lost 1 uruk hai in a battle, you can only use 4 others) unless you move your army to on of your claimbuilds which has a Watch-Tower, or in allies claimbuilds if they have it too and an embassy of your faction.
+                </p>
+                <h4 class="headlinearticles" style="font-size: 25px;"><em>Army Movement</em></h4>
+                <p>
+                    1. Armies have to move region to region.<br>
+                    2. Armies move 1 region every day.<br>
+                    3. Armies cannot attack through an enemy region. Have to walk around, ask permission to travel or attack region blocking.<br>
+                    4. 1 army per player, 2 if there is a faction's stronghold nearby(1 region) which will add 1 army slot to a Player. Only players can move the assigned army. Faction leaders can give army control players.<br>
+                    5. Armies only created by claimbuilds (town/keep or above. Not from villages/towers/hamlets).<br>
+                    6. RP character is with assigned army. If army is not at a battle location, player can fight but only with default faction gear as a "fill in captain".<br>
+                    7. Trade company assigned to player.<br>
+                    8. RP character can be with both army and Trading Company.<br>
+                    9. 5 stacks of cooked/prepared food per region moved. (eg. moving 2 tiles, you need 10 stacks of food to move that area.)<br>
+                    10. Unassigned armies can be moved by faction leader between CBs in current, neighbouring regions.<br>
+                </p>
+                <h4 class="headlinearticles" style="font-size: 25px;"><em>Army Creation</em></h4>
+                <p>
+                    1. Armies are created when a town/keep is created (or above). They need appropriate buildings in order to have specific units (orc pits for orcs, barracks for human soldiers, archery ranges for archers, troll cages for trolls, etc.)<br>
+                    2. If an army is defeated- new army costs 5k, a small pouch of food, OR 3 stacks of iron.<br>
+                    3. Warg bombers banned as units.<br>
+                    4. Units for battles MUST be bought at the start of a battle by a provided commander.<br>
+                    5. Equipment on units goes up to next tier (Gunda orc with armour goes to 1 token from .5) unless it's same equipment (ex. black uruks units with maxed black uruk's gear is ok).<br>
+                    6. You may not change custom gear after army is created. You MAY change weapons<br>
+                    7. If staff catch players changing gear illegally in battles, we will butcher the unit. If other units die as collateral, we won't refund those.<br>
+                    8. Units must be specified upon army creation. You may not change units unless the army is defeated and you raise a new one.<br>
+                    9. If you want to add armour to a unit, you MUST let us know on army creation.<br>
+                </p>
+                <h4 class="headlinearticles" style="font-size: 25px;"><em>Units Cost</em></h4>
+                <p>
+                    Armies have 10 points worth of tokens<br><br>
+                    Tier 1 (0.5 cost):<br>
+                    Levymen, civilians, gunda orcs, hobbits, bree soldiers, nomads, snagas<br><br>
+
+                    Tier 2 (1 cost):<br>
+                    Orcs, orc bombers, soldiers, archers, rangers, elf scouts, blowgunners, fire-throwers, normal Half Trolls, Wargs, Spiders, axe throwers (NOT dwarves)<br><br>
+
+                    Tier 3 (2 cost):<br>
+                    Elves, Uruks, Dwarves, Half Troll warriors, Dunland berserkers, tower guards, swan knights, golden rhunic, angmar trolls<br><br>
+
+                    Tier 4 (3 cost):<br>
+                    Uruk Berserkers<br><br>
+
+                    Tier 5 (5 cost):<br>
+                    Ologs, Mirk trolls, Hurons<br><br>
+                </p>
+
             </article>
             <p class="between">
                 <br>
@@ -216,7 +274,11 @@
             <article id="civilwar">
                 <h4 class="headlinearticles"> Civil War Rules </h4>
                 <p>
-                    As part of the War System, the Civil Wars are as well disabled atm.
+                    1. Rebels must build new town or castle.<br>
+                    2. Rebels can be independent if they claim a whole region (eg. Gondorian rebels being not a part of Gondor).<br>
+                    3. Outside factions may aid in civil wars.<br>
+                    4. Rebels gain negative alignment for the duration of the civil war, current alignment will be noted and reset afterwards (Gondorian rebels gaining mordor align).<br>
+                    5. Faction leader inactivity lowered to 4 weeks without valid reason. If you come back, you may apply for leadership again if you lost it. <br>
                 </p>
             </article>
             <p class="between">
