updated index to publish the wiki.

--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@ and open the template in the editor.
             </h3>
             <p class="block-text">
             Welcome to the Ardas Legends Wiki. <br>
-            Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.
-            We wish you good health in those dire times and hope to see you again.
+            Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.<br>
+	    Some content might be outdated and other content not added, as we got a lot on our bucketlist lately, we hope you still can enjoy this wiki.<br>
+            If you have any suggestions for the wiki pls forward those to the wiki developers, Jukoz and Anedhel, on discord.<br>
+	    We wish you good health in those dire times and hope to see you again.
             <br>
             </p>
 	    <p>
