--- a/rules.html
+++ b/rules.html
@@ -128,6 +128,8 @@
                 
 
             <div class="block">
+		The rules on here are a little outdated at this time, we are currently going through a large rework of the war system
+		and alongside the overall system, thus we decided not yet to update the rules, but do so when all is done.<br>
                 <article id="explanation">
                 <h4 class="headlinearticles"> Explanations </h4>
                 <p>
