added a note that the page is under progress and outdated

--- a/factions.html
+++ b/factions.html
@@ -138,6 +138,8 @@
         <a href="factions.html#woodmen">Woodmen</a><br>
     </div>
    <div class="block">
+        We are adding the different factions over time, some of those factions are no longer a faction and new might have been added, we bid patience for this.
+        If you would like to contribute to this page feel free to send the wiki developers a text file with a suggestion for a factions article.<br>
         <article id="avari">
             <h4 class="headlinearticles"> Avari </h4>
             <p>
