added a note that its outdated

--- a/claiming.html
+++ b/claiming.html
@@ -100,6 +100,7 @@ and open the template in the editor.
         </header>
     <main>
         <div class="block"> <!-- Claiming File & Claiming Map-->
+		Welcome to the claiming page, the file and the map are both outdated and staff is working on updating them, however the map is currently getting a complete rework with new regions etc.
             <div class="inline">
                 <h4 class="headlinearticles">Claiming File</h4>
 		    <a href="img/BuildList.xlsx" download>
