--- a/rules.html
+++ b/rules.html
@@ -182,7 +182,7 @@
                     6.  Mithril weapons, Utumno weapons, the Gondolinian sword and the Mallorn mace are excluded from roleplay gear under all circumstances.<br>
                     7.  If you do not have a roleplay character, you need to use default armor/weapons of your faction<br>
                     8.  A faction can acquire access to other faction’s weapons (weapons only not the armour) by trade with another faction. Weapon trade may only be initiated by a faction leader.<br>
-                    9. Merged factions can use both armours/weapons/units. Pretty much everything.
+                    9. Merged factions can use both armours/weapons/units. Pretty much everything.<br>
                     10. Galvorn will be allowed for custom factions ONLY with good lore upon faction creation.
                 </p>
             </article>
