Added Essentials Economy and renamed the page to "Custom Plugins and Features"

--- a/plugins.html
+++ b/plugins.html
@@ -15,7 +15,7 @@ and open the template in the editor.
     <body>
         <header>
             <br>
-            <h1 style="color:white; font-size: 36px;">Custom Plugins</h1>
+            <h1 style="color:white; font-size: 36px;">Custom Plugins and Features</h1>
             <br>
         </header>
         <main id="plugins">
@@ -49,6 +49,13 @@ and open the template in the editor.
                     The plugin is made by Axel_HiddenIsMe_Rooftop (not us)<br>
                     Therefore, we took materials id's of of Lord of the Ring mod, and included it in the plugin's config.yml file, so now we can use modded stairs blocks as chairs! <br><br>
                     *This plugin teleports the player, so /back will result in your last seat location.
+                </p>
+            </article>
+            <article id="Arda's Plugin">
+                <h4 class="headlinearticles"> Essentials Economy </h4>
+                <p>
+                    We utilize the Essentials Economy feature on the server. Credits for this go to the Contributors to essentials.<br>
+                    A Lord of the Rings Mod coin is having the value of $1 in the economy system. There is a bank in Esgaroth where you can exchange your money for balance and vise versa.<br>
                 </p>
             </article>
         </div>
