--- a/staff.html
+++ b/staff.html
@@ -148,7 +148,7 @@ and open the template in the editor.
             </div>
             <div class="inline">
                 <img src="https://cravatar.eu/head/bakbar" title="bakbar">
-                <p class="staff_names" style="margin-top: 0px;">bakbar - Rip June 2020</p>
+                <p class="staff_names" style="margin-top: 0px;">bakbar</p>
             </div>
         </div>
         <div> <!-- Retired -->
