removed daim from admin, added tuts to mod

--- a/staff.html
+++ b/staff.html
@@ -132,10 +132,6 @@ and open the template in the editor.
                 <p class="staff_names" style="margin-top: 0px;">Welles (MCWelles)</p>
             </div>
             <div class="inline">
-                <img src="https://cravatar.eu/head/20damian07" title="Daim">
-                <p class="staff_names" style="margin-top: 0px;">Daim (20damian07)</p>
-            </div>
-        <div class="inline">
                 <img src="https://cravatar.eu/head/glupe1" title="Glupe">
                 <p class="staff_names" style="margin-top: 0px;">Glupe (glupe1)</p>
             </div>
@@ -150,12 +146,20 @@ and open the template in the editor.
                 <img src="https://cravatar.eu/head/bakbar" title="bakbar">
                 <p class="staff_names" style="margin-top: 0px;">bakbar</p>
             </div>
+            <div class="inline">
+                <img src="https://cravatar.eu/head/TutsMaNix" title="Tuts">
+                <p class="staff_names" style="margin-top: 0px;">Tuts (TutsMaNix)</p>
+            </div>
         </div>
         <div> <!-- Retired -->
             <h4 style="margin-bottom: 25px;">Retired in peace (Rip)</h4>
             <div class="inline">
                 <img src="https://cravatar.eu/head/oveny" title="Oveny">
                 <p class="staff_names" style="margin-top: 0px;">Oveny - Rip May 2020</p>
+            </div>
+            <div class="inline">
+                <img src="https://cravatar.eu/head/20damian07" title="Daim">
+                <p class="staff_names" style="margin-top: 0px;">Daim (20damian07) - Rip May 2020</p>
             </div>
         </div>
     </div>
