added the download button for the ressource pack

--- a/claiming.html
+++ b/claiming.html
@@ -106,6 +106,8 @@ and open the template in the editor.
                 <h4 class="headlinearticles">Claiming File</h4>
 		    <a href="img/BuildList.xlsx" download>
 			<button class="downloadbutton"> Download Build List </a>
+		    </a><a href="img/ardaslegends_pack(Regionmap).zip" download>
+			<button class="downloadbutton"> Download Ressource Pack </a>
 		    </a>
                 <!-- here i plan a download button for the claiming file -->
             </div>
