fixed discord link

--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ and open the template in the editor.
             </p>
                 <ul>
                     <li>
-                        <a class="btn" href="https://discord.gg/Q7AjZVf">Discord Server</a>
+                        <a class="btn" href="https://discord.gg/W8wnCKDtp9">Discord Server</a>
                     </li>
                     <li>
                         <a class="btn" href="plugins.html">Custom Plugins</a>
